# enikk

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  TODO.md  build.bat  enikk.spec  lint.bat  lint.ps1  pyinstaller_entry.py  pyproject.toml  run-daemon.bat  run-daemon.ps1  test.ps1
.claude/: settings.local.json
.github/workflows/: ci.yml
enikk/: __init__.py  __main__.py  analyzer.py  capture.py  cli.py  config.py  controller.py  daemon.py  eternity.py  events.py  game_controller.py  im_bridge.py  input.py  process.py  profile.py  prompts.py  runtime.py  server.py  tool_decorator.py  tray.py  ui_parser.py  updater.py  version.py  webview_api.py  weights.py  window.py  window_utils.py  ws_server.py
enikk/agent/: hermes_tools.py  manager.py  prompts.py  runner.py
enikk/game/: __init__.py  capture.py  input.py  process.py  types.py  window.py  window_picker.py
enikk/profiles/: __init__.py  model.py  nikke.py
enikk/skills/nikke/: SKILL.md
enikk/skills/wuthering-waves/: SKILL.md
enikk/static/: frontend.html  index.html
enikk/static/js/: app.js  i18n.js
enikk/tui/: app.py
frontend/: .env  README.md  package-lock.json  package.json
frontend/src/: App.vue  ws-client.ts
frontend/src/components/: ChatPanel.vue
frontend/src/stores/: chat.ts
scripts/: check_html.py  export_yolo_onnx.py
tests/: conftest.py  test_config.py  test_controller.py  test_dispatch.py  test_eternity.py  test_im_bridge.py  test_input.py  test_provider_selection.py  test_server.py  test_tool_decorator.py  test_ui_parser.py  test_updater.py  test_webview_api.py  test_weights.py
weights/icon_detect/: model.onnx
