[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enikk"
version = "0.1.0"
description = "Enikk: Self-improving GUI Agent."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "opencv-python>=4.9",
    "numpy>=1.26",
    "psutil>=5.9",
    "pywin32>=306",
    "rapidocr-onnxruntime>=1.3",
    "pyyaml>=6.0",
    "pyautogui>=0.9",
    "pynput>=1.7",
    "mss>=10.0",
    "Pillow>=10.0",
    "onnxruntime>=1.16",
    "pywebview>=5.0",
    "hermes-agent==0.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "mypy>=1.15",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[project.scripts]
enikk = "enikk.__main__:main"

[tool.setuptools.packages.find]
include = ["enikk*"]

[tool.setuptools.package-data]
enikk = ["static/**/*", "skills/**/*"]

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_level = "DEBUG"