[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enikk"
version = "0.1.0"
description = "Enikk: Self-improving GUI Agent."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "opencv-python==4.13.0.92",
    "numpy==2.4.4",
    "psutil==7.2.2",
    "pywin32==311",
    "rapidocr-onnxruntime==1.4.4",
    "pyyaml==6.0.3",
    "pyautogui==0.9.54",
    "pynput==1.8.1",
    "mss==10.2.0",
    "Pillow==12.2.0",
    "onnxruntime==1.26.0",
    "pywebview==6.2.1",
    "hermes-agent==0.14.0",
    "aiohttp==3.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.0",
    "ruff>=0.11",
    "mypy>=1.15",
]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[project.scripts]
enikk = "enikk.__main__:main"

[tool.setuptools.packages.find]
include = ["enikk*"]

[tool.setuptools.package-data]
enikk = ["static/**/*", "skills/**/*"]

[tool.ruff]
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_level = "DEBUG"