[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enikk"
version = "0.1.0"
description = "Enikk: Self-improving GUI Agent."
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "gtt116", email = "gtt116@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi==0.136.1",
    "uvicorn==0.46.0",
    "opencv-python==4.13.0.92",
    "numpy==2.4.4",
    "psutil==7.2.2",
    "pywin32==311; sys_platform == 'win32'",
    "rapidocr-onnxruntime==1.4.4",
    "pyyaml==6.0.3",
    "pyautogui==0.9.54",
    "pynput==1.8.1",
    "mss==10.2.0",
    "Pillow==12.2.0",
    "onnxruntime==1.26.0",
    "pywebview==6.2.1",
    "hermes-agent==0.14.0",
    "aiohttp==3.9.1",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.15",
    "mypy==2.1.0",
]

[project.urls]
Homepage = "https://github.com/gtt116/enikk"
Repository = "https://github.com/gtt116/enikk"
Issues = "https://github.com/gtt116/enikk/issues"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[project.scripts]
enikk = "enikk.__main__:main"

[tool.setuptools.packages.find]
include = ["enikk*"]

[tool.setuptools.package-data]
enikk = ["static/**/*", "skills/**/*"]

[tool.ruff]
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_level = "DEBUG"